--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
         <title>Shop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="\main-style.css" rel="stylesheet">
-        <link href="\Header-style.css" rel="stylesheet">
+        <link href="main-style.css" rel="stylesheet">
+        <link href="Header-style.css" rel="stylesheet">
     </head>
     <body>
         <header style="position: sticky;top: 0.0;">
             <div style="display: flex;">
                 <div id="profile" class="header-div"
                     style="margin-right: 5px;flex-grow: 0;width: fit-content;padding: 6px;height: 40px;">
-                    <img src="/assets/images/Profile.jpg"
+                    <img src="assets/images/Profile.jpg"
                         style="height: 40px;border-radius: 50%;margin: 0;">
                     <p id="profile-text" class="p-normal"
                         style="position: absolute;left: 50px;">Welcome</p>
@@ -21,11 +21,11 @@
                 <div class="header-div" style="flex-grow: 4;">
                     <div
                         style="display: flex;align-items:center;margin: auto;margin-bottom: 50%;margin-top: 50%;">
-                        <img src="/assets/images/VG logo 373737.png"
+                        <img src="assets/images/VG logo 373737.png"
                             style="height: 35px;">
                         <h1 style="margin-left: 3px;">VG Shop</h1>
                     </div>
-                    <img src="/assets/images/github(1).png" alt="github"
+                    <img src="assets/images/github(1).png" alt="github"
                         onclick="window.open('https://github.com/yooopy')"
                         class="hover-icon"
                         style="height: 30px;">
@@ -41,72 +41,72 @@
                     <div class="div-inside">
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/androidphones-2048px-4861.png">
+                                src="assets/phones/androidphones-2048px-4861.png">
                             <p class="image-div-text">Google Pixel 7</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/asus-zenfone-10-in-hand.png">
+                                src="assets/phones/asus-zenfone-10-in-hand.png">
                             <p class="image-div-text">Google Pixel 8</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/CMC_1623.png">
+                                src="assets/phones/CMC_1623.png">
                             <p class="image-div-text">Samsung Note 22-S</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/huawei-nova-5t.png">
+                                src="assets/phones/huawei-nova-5t.png">
                             <p class="image-div-text">Huawei F51</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/mobiles-nav-card-apple2-200323.png">
+                                src="assets/phones/mobiles-nav-card-apple2-200323.png">
                             <p class="image-div-text">IPhone 13 Pro max</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/MP_UnlockedPhones_3.png">
+                                src="assets/phones/MP_UnlockedPhones_3.png">
                             <p class="image-div-text">Xiaomi Note8 Pro</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/pink-1.png">
+                                src="assets/phones/pink-1.png">
                             <p class="image-div-text">IPhone 15 Pro max</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/androidphones-2048px-4861.png">
+                                src="assets/phones/androidphones-2048px-4861.png">
                             <p class="image-div-text">Google Pixel 7</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/asus-zenfone-10-in-hand.png">
+                                src="assets/phones/asus-zenfone-10-in-hand.png">
                             <p class="image-div-text">Google Pixel 8</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/CMC_1623.png">
+                                src="assets/phones/CMC_1623.png">
                             <p class="image-div-text">Samsung Note 22-S</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/huawei-nova-5t.png">
+                                src="assets/phones/huawei-nova-5t.png">
                             <p class="image-div-text">Huawei F51</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/mobiles-nav-card-apple2-200323.png">
+                                src="assets/phones/mobiles-nav-card-apple2-200323.png">
                             <p class="image-div-text">IPhone 13 Pro max</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/MP_UnlockedPhones_3.png">
+                                src="assets/phones/MP_UnlockedPhones_3.png">
                             <p class="image-div-text">Xiaomi Note8 Pro</p>
                         </div>
                         <div class="image-div">
                             <img class="images"
-                                src="/assets/phones/pink-1.png">
+                                src="assets/phones/pink-1.png">
                             <p class="image-div-text">IPhone 15 Pro max</p>
                         </div>
 
@@ -120,7 +120,7 @@
                     <img
                         style="height: 40px;position: absolute; left: 85%;top: 60%; border-radius: 50%;box-shadow: 0px 0px 15px -5px;"
                         id="hover-icon2"
-                        src="/assets/images/next.png">
+                        src="assets/images/next.png">
                 </div>
             </article>
             <article style="margin-top: 40px;">
@@ -134,34 +134,34 @@
                             <td><div class="image-div"><img
                                         style="padding: 20px;height: 60px;"
                                         class="table-images"
-                                        src="/assets/Brands/xiaomi.png"><p
+                                        src="assets/Brands/xiaomi.png"><p
                                         class="table-text">Xiaomi</p></div></td>
                             <td><div class="image-div"><img
                                         style="padding: 20px;height: 60px;"
                                         class="table-images"
-                                        src="/assets/Brands/samsung.png"><p
+                                        src="assets/Brands/samsung.png"><p
                                         class="table-text">Samsung</p></div></td>
                             <td><div class="image-div"><img
                                         style="padding: 20px;height: 60px;"
                                         class="table-images"
-                                        src="/assets/Brands/apple-logo.png"><p
+                                        src="assets/Brands/apple-logo.png"><p
                                         class="table-text">Apple</p></div></td>
                         </tr>
                         <tr>
                             <td><div class="image-div"><img
                                         style="padding: 20px;height: 60px;"
                                         class="table-images"
-                                        src="/assets/Brands/huawei.png"><p
+                                        src="assets/Brands/huawei.png"><p
                                         class="table-text">Huawei</p></div></td>
                             <td><div class="image-div"><img
                                         style="padding: 20px;height: 60px;"
                                         class="table-images"
-                                        src="/assets/Brands/search(1).png"><p
+                                        src="assets/Brands/search(1).png"><p
                                         class="table-text">Google</p></div></td>
                             <td><div class="image-div"><img
                                         style="padding: 20px;height: 60px;"
                                         class="table-images"
-                                        src="/assets/Brands/lenovo.png"><p
+                                        src="assets/Brands/lenovo.png"><p
                                         class="table-text">Lenovo</p></div></td>
                         </tr>
                     </table>
@@ -169,7 +169,7 @@
                 </div>
             </main>
             <img
-                src="/assets/images/chat.png"
+                src="assets/images/chat.png"
                 style="position: absolute;position: fixed;bottom: 25px ;right: 25px; height: 55px; "
                 id="chat-icon">
         </body>
