Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Shop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="\main-style.css" rel="stylesheet">
-        <link href="\Header-style.css" rel="stylesheet">
+        <link href="main-style.css" rel="stylesheet">
+        <link href="Header-style.css" rel="stylesheet">
     </head>
     <body>
         <header style="position: sticky;top: 0.0;">
