--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                         style="display: flex;align-items:center;margin: auto;margin-bottom: 50%;margin-top: 50%;">
                         <img src="assets/images/VG logo 373737.png"
                             style="height: 35px;">
-                        <h1 style="margin-left: 3px;">VG Shop</h1>
+                        <h1 style="margin-left: 3px;font-weight: 550;">VG
+                            Shop</h1>
                     </div>
                     <img src="assets/images/github(1).png" alt="github"
                         onclick="window.open('https://github.com/yooopy')"
@@ -172,5 +173,15 @@
                 src="assets/images/chat.png"
                 style="position: absolute;position: fixed;bottom: 25px ;right: 25px; height: 55px; "
                 id="chat-icon">
+            <footer>
+                <div>
+                    <hr style="border-style:solid gray ;width: 300px">
+                    <p
+                        style="font-family: monospace;color: gray;text-align: center;">I
+                        Hope
+                        You Love Me
+                        :)&nbsp;|&nbsp;&copy;2024</p>
+                </div>
+            </footer>
         </body>
     </html>
